correctly aligned the home page

--- a/style/_index-page.scss
+++ b/style/_index-page.scss
@@ -28,7 +28,8 @@
     }
   }
   .upcoming-dates{
-    padding-right: 10px;
+    padding-right: 0px;
+    padding-left: 40px;
     float: right;
     .text-m-1{
       padding-bottom: 10px;
@@ -36,7 +37,7 @@
       word-wrap: break-word;
     }
     .text-m-2{
-      width: 80%;
+      width: 60%;
       word-wrap: break-word;
       padding-bottom: 10px;
       font-weight: bold;
@@ -100,7 +101,7 @@
   .bar{
     background-color: $bar-color;
     height: 2px;
-    width: 79%;
+    width: 88%;
     margin-top: 0px;
     margin-bottom: 10px;
   }
@@ -109,10 +110,10 @@
 .Software-Project-I{
   margin-left: 350px;
   .S-P-I{
-    width: 20%;
+    width: 23%;
     padding-top: 20px;
     padding-bottom: 40px;
-    padding-left: 620px;
+    padding-left: 585px;
     .text-m-1{
       color: $text-hblue;
       padding-bottom: 10px;
@@ -121,7 +122,7 @@
   .bar{
     background-color: $bar-color;
     height: 2px;
-    width: 79%;
+    width: 88%;
     margin-top: 0px;
     margin-bottom: 10px;
     margin-left: 0px;
@@ -149,7 +150,7 @@
     }
   }
   .upcoming-events2{
-    margin-left: 200px;
+    margin-left: 175px;
     display: inline-block;
     width: 24%;
     .text-m-1{
